Created signup view and created mixin to redirect already logged in users.

--- a/src/templates/partials/_navbar.html
+++ b/src/templates/partials/_navbar.html
@@ -3,7 +3,7 @@
     <h1>Django Web Framework</h1>
     <ul>
       <li><a href="{% url 'users:login' %}">Login</a></li>
-      <li><a href="">Sign Up</a></li>
+      <li><a href="{% url 'users:signup' %}">Sign Up</a></li>
     </ul>
   </div>
 </nav>
