--- a/src/templates/registration/signup.html
+++ b/src/templates/registration/signup.html
@@ -3,12 +3,23 @@
 
 {% block content %}
 
+<!-- messages -->
+{% if messages %}
+  <ul>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+{% endif %}
+
+<!-- non field errors message -->
 {% if form.errors and not form.non_field_errors %}
   <p>
     {% blocktranslate count counter=form.errors.items|length %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktranslate %}
   </p>
 {% endif %}
 
+<!-- non field errors -->
 {% if form.non_field_errors %}
   {% for error in form.non_field_errors %}
   <p>
