--- a/src/templates/greetings/index.html
+++ b/src/templates/greetings/index.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
-
-{% if request.user.is_authenticated %}
-  <h1><span>{{ request.user.username }},</span> Welcome to Django Web Framework</h1>
-{% else %}
-  <h1>Welcome to Django Web Framework</h1>
-  <p><small>You are not authenticated</small></p>
-{% endif %}
-
-<p>{{ message }}</p>
-
+  {% if request.user.is_authenticated %}
+    <h1>
+      <span>{{ request.user.username }},</span> Welcome to Django Web Framework
+    </h1>
+  {% else %}
+    <h1>Welcome to Django Web Framework</h1>
+    <p>
+      <small>You are not authenticated</small>
+    </p>
+  {% endif %}
+  <p>{{ message }}</p>
 {% endblock %}
