--- a/src/templates/registration/logged_out.html
+++ b/src/templates/registration/logged_out.html
@@ -1,21 +1,14 @@
 {% extends "base.html" %}
 {% load i18n %}
-
 {% block content %}
-
-<h1>{{ title }}</h1>
-
-{% if messages %}
-  <ul>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-  </ul>
-{% endif %}
-
-
-<p>{% translate "Thanks for spending some quality time with the web site today." %}</p>
-
-<p><a href="{% url 'users:login' %}">{% translate 'Log in again' %}</a></p>
-
+  <h1>{{ title }}</h1>
+  {% if messages %}
+    <ul>
+      {% for message in messages %}<li>{{ message }}</li>{% endfor %}
+    </ul>
+  {% endif %}
+  <p>{% translate "Thanks for spending some quality time with the web site today." %}</p>
+  <p>
+    <a href="{% url 'users:login' %}">{% translate 'Log in again' %}</a>
+  </p>
 {% endblock %}
