--- a/src/templates/registration/password_reset_confirm.html
+++ b/src/templates/registration/password_reset_confirm.html
@@ -1,40 +1,36 @@
 {% extends "base.html" %}
 {% load i18n static %}
-
 {% block content %}
-
-{% if validlink %}
-
-<p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-
-<form method="post">
-  {% csrf_token %}
-  <fieldset>
-    <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}">
-    <div>
-      {{ form.new_password1.errors }}
+  {% if validlink %}
+    <p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
+    <form method="post">
+      {% csrf_token %}
+      <fieldset>
+        <input class="hidden"
+               autocomplete="username"
+               value="{{ form.user.get_username }}">
+        <div>
+          {{ form.new_password1.errors }}
+          <div>
+            <label for="id_new_password1">{% translate 'New password:' %}</label>
+            {{ form.new_password1 }}
+          </div>
+        </div>
+        <div>
+          {{ form.new_password2.errors }}
+          <div>
+            <label for="id_new_password2">{% translate 'Confirm password:' %}</label>
+            {{ form.new_password2 }}
+          </div>
+        </div>
+      </fieldset>
       <div>
-        <label for="id_new_password1">{% translate 'New password:' %}</label>
-        {{ form.new_password1 }}
+        <input type="submit" value="{% translate 'Change my password' %}">
       </div>
-    </div>
-    <div>
-      {{ form.new_password2.errors }}
-      <div>
-        <label for="id_new_password2">{% translate 'Confirm password:' %}</label>
-        {{ form.new_password2 }}
-      </div>
-    </div>
-  </fieldset>
-  <div>
-    <input type="submit" value="{% translate 'Change my password' %}">
-  </div>
-</form>
-
-{% else %}
-
-<p>{% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
-
-{% endif %}
-
+    </form>
+  {% else %}
+    <p>
+      {% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
+    </p>
+  {% endif %}
 {% endblock %}
