--- a/src/templates/registration/password_reset_form.html
+++ b/src/templates/registration/password_reset_form.html
@@ -1,24 +1,22 @@
 {% extends "base.html" %}
 {% load i18n %}
-
 {% block content %}
-
-<p>{% translate 'Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.' %}</p>
-
-<form method="post">
-  {% csrf_token %}
-  <fieldset>
-    <div>
-      {{ form.email.errors }}
+  <p>
+    {% translate 'Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.' %}
+  </p>
+  <form method="post">
+    {% csrf_token %}
+    <fieldset>
       <div>
-        <label for="id_email">{% translate 'Email address:' %}</label>
-        {{ form.email }}
+        {{ form.email.errors }}
+        <div>
+          <label for="id_email">{% translate 'Email address:' %}</label>
+          {{ form.email }}
+        </div>
       </div>
+    </fieldset>
+    <div>
+      <input type="submit" value="{% translate 'Reset my password' %}">
     </div>
-  </fieldset>
-  <div>
-    <input type="submit" value="{% translate 'Reset my password' %}">
-  </div>
-</form>
-
+  </form>
 {% endblock %}
