--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Django</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'greetings/css/style.css' %}">
   </head>
   <body>
     <!-- Navbar -->
@@ -13,6 +13,6 @@
     <!-- content -->
     {% block content %}{% endblock %}
     <!-- script.js -->
-    <script defer src="{% static 'js/script.js' %}"></script>
+    <script defer src="{% static 'greetings/js/script.js' %}"></script>
   </body>
 </html>
