--- a/project/templates/greetings/images.html
+++ b/project/templates/greetings/images.html
@@ -7,7 +7,7 @@
   <form action="." method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="image">Select image file</label>
-    <input type="file" name="image" id="image">
+    <input type="file" name="image" id="image" required>
 
     <input type="submit" value="Upload">
   </form>
