--- a/project/templates/registration/login.html
+++ b/project/templates/registration/login.html
@@ -7,24 +7,18 @@
       {% for message in messages %}<li>{{ message }}</li>{% endfor %}
     </ul>
   {% endif %}
+  <!-- form errors (message only) -->
   {% if form.errors and not form.non_field_errors %}
     <p>
       {% blocktranslate count counter=form.errors.items|length %}Please correct the error below.{% plural %}Please correct the errors below.{% endblocktranslate %}
     </p>
   {% endif %}
+  <!-- form non-field error messages -->
   {% if form.non_field_errors %}
     {% for error in form.non_field_errors %}<p>{{ error }}</p>{% endfor %}
   {% endif %}
   <div>
-    {% if user.is_authenticated %}
-      <p>
-        {% blocktranslate trimmed %}
-          You are authenticated as {{ username }}, but are not authorized to
-          access this page. Would you like to login to a different account?
-        {% endblocktranslate %}
-      </p>
-    {% endif %}
-    <form action="" method="post">
+    <form action="." method="post">
       {% csrf_token %}
       <div>
         {{ form.username.errors }}
@@ -33,14 +27,17 @@
       <div>
         {{ form.password.errors }}
         {{ form.password.label_tag }} {{ form.password }}
-        <input type="hidden" name="next" value="{{ next }}">
       </div>
-      {% url 'users:password_reset' as password_reset_url %}
+      {% url '' as password_reset_url %}
       {% if password_reset_url %}
         <div>
           <a href="{{ password_reset_url }}">{% translate 'Forgotten your password or username?' %}</a>
         </div>
       {% endif %}
+      <div>
+        <!-- hidden 'next_page' field -->
+        <input type="hidden" name="next" value="{{ next }}">
+      </div>
       <div>
         <input type="submit" value="{% translate 'Log in' %}">
       </div>
