--- a/project/templates/registration/login.html
+++ b/project/templates/registration/login.html
@@ -35,7 +35,7 @@
         </div>
       {% endif %}
       <div>
-        <!-- hidden 'next_page' field -->
+        <!-- hidden field for redirecting -->
         <input type="hidden" name="next" value="{{ next }}">
       </div>
       <div>
