--- a/project/templates/registration/signup.html
+++ b/project/templates/registration/signup.html
@@ -57,7 +57,7 @@
         {{ form.last_name.help_text }}
       </div>
       <div>
-        <!-- hidden field for REDIRECT_FIELD_NAME  -->
+        <!-- hidden field for redirecting -->
         <input type="hidden" name="next" value="{{ next }}">
       </div>
       <hr>
