--- a/project/templates/registration/logged_out.html
+++ b/project/templates/registration/logged_out.html
@@ -10,6 +10,6 @@
   {% endif %}
   <p>{% translate "Thanks for spending some quality time with the web site today." %}</p>
   <p>
-    <a href="{% url 'users:login' %}">{% translate 'Log in again' %}</a>
+    <a href="{% url 'accounts:login' %}">{% translate 'Log in again' %}</a>
   </p>
 {% endblock %}
