--- a/project/templates/registration/signup.html
+++ b/project/templates/registration/signup.html
@@ -66,7 +66,7 @@
       </div>
     </form>
     <hr>
-    {% url 'users:login' as login_url %}
+    {% url 'accounts:login' as login_url %}
     {% if login_url %}
       <div>
         <p>
