--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Django</title>
+    <title>{% block title %}Welcome to Django{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
