--- a/project/templates/403.html
+++ b/project/templates/403.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Bad Request{% endblock title %}
+{% block title %}Forbidden (403){% endblock title %}
 {% block content %}
-  <h1>Bad Request (400)</h1>
+  <h1>Forbidden (403)</h1>
   <p>
     {% if exception %}
       {{ exception }}
     {% else %}
-      That's an error
+      You're not allowed to access this page.
     {% endif %}
   </p>
 {% endblock content %}
