--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block title %}Page not found{% endblock title %}
 {% block content %}
-  <h1>Page not found (404)</h1>
+  <h1>Not found (404)</h1>
   <p>
     {% if exception %}
       {{ exception }}
