Formatted html templates using djlint.

--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Page not found{% endblock title %}
+{% block title %}
+  Page not found
+{% endblock title %}
 {% block content %}
   <h1>Not found (404)</h1>
   <p>
