--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,17 +1,24 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Welcome to Django{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      {% block title %}
+        Welcome to Django
+      {% endblock title %}
+    </title>
+    <link rel="stylesheet" href="{% static 'css/app.css' %}" />
   </head>
   <body>
     <!-- Navbar -->
     {% include 'partials/_navbar.html' %}
+
     <!-- content -->
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock content %}
     <!-- script.js -->
     <script defer src="{% static 'js/app.js' %}"></script>
   </body>
