--- a/project/templates/registration/password_change_form.html
+++ b/project/templates/registration/password_change_form.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% load i18n %}
+
 {% block content %}
   <div>
     <form method="post">
@@ -40,9 +42,9 @@
         <div class="submit-row">
           <input type="submit"
                  value="{% translate 'Change my password' %}"
-                 class="default">
+                 class="default" />
         </div>
       </div>
     </form>
   </div>
-{% endblock %}
+{% endblock content %}
