--- a/project/templates/registration/password_reset_confirm.html
+++ b/project/templates/registration/password_reset_confirm.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% load i18n static %}
+
 {% block content %}
   {% if validlink %}
     <p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
@@ -8,7 +10,7 @@
       <fieldset>
         <input class="hidden"
                autocomplete="username"
-               value="{{ form.user.get_username }}">
+               value="{{ form.user.get_username }}" />
         <div>
           {{ form.new_password1.errors }}
           <div>
@@ -26,7 +28,7 @@
         </div>
       </fieldset>
       <div>
-        <input type="submit" value="{% translate 'Change my password' %}">
+        <input type="submit" value="{% translate 'Change my password' %}" />
       </div>
     </form>
   {% else %}
@@ -34,4 +36,4 @@
       {% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}
     </p>
   {% endif %}
-{% endblock %}
+{% endblock content %}
