--- a/project/templates/400.html
+++ b/project/templates/400.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Bad Request{% endblock title %}
+{% block title %}
+  Bad Request
+{% endblock title %}
 {% block content %}
   <h1>Bad Request (400)</h1>
   <p>
