--- a/project/templates/500.html
+++ b/project/templates/500.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Server Error{% endblock title %}
+{% block title %}
+  Server Error
+{% endblock title %}
 {% block content %}
   <h1>Internal Server Error (500)</h1>
   <h3>Looks like something went wrong!</h3>
