--- a/project/templates/registration/password_change_done.html
+++ b/project/templates/registration/password_change_done.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+
 {% load i18n %}
+
 {% block content %}
   {% if messages %}
     <ul>
@@ -10,4 +12,4 @@
     <h1>{{ title }}</h1>
     <p>{% translate 'Your password was changed.' %}</p>
   </div>
-{% endblock %}
+{% endblock content %}
