--- a/project/templates/registration/password_reset_complete.html
+++ b/project/templates/registration/password_reset_complete.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% load i18n %}
+
 {% block content %}
   {% if messages %}
     <div>
@@ -15,4 +17,4 @@
       <a href="{{ login_url }}">{% translate 'Log in' %}</a>
     </p>
   </div>
-{% endblock %}
+{% endblock content %}
