--- a/project/templates/registration/password_reset_done.html
+++ b/project/templates/registration/password_reset_done.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% load i18n %}
+
 {% block content %}
   <h1>{{ title }}</h1>
   <p>
@@ -8,4 +10,4 @@
   <p>
     {% translate 'If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.' %}
   </p>
-{% endblock %}
+{% endblock content %}
