--- a/project/templates/registration/password_reset_form.html
+++ b/project/templates/registration/password_reset_form.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
+
 {% load i18n %}
+
 {% block content %}
   <p>
     {% translate 'Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.' %}
@@ -16,7 +18,7 @@
       </div>
     </fieldset>
     <div>
-      <input type="submit" value="{% translate 'Reset my password' %}">
+      <input type="submit" value="{% translate 'Reset my password' %}" />
     </div>
   </form>
-{% endblock %}
+{% endblock content %}
